--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -4,10 +4,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_create_meme">CreateMemeActivity</string>
+
     <item name="create_meme_top_row_height" type="string">35dip</item>
+
     <string name="share_string">Share</string>
     <string name="save_string">Save</string>
     <string name="edit_top_text_string">Top Text</string>
     <string name="edit_bottom_text_string">Bottom Text</string>
+    <string name="title_activity_view_meme">ViewMeme</string>
 
 </resources>
