encapsulated the REST api calls in ViewMeme

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -20,5 +20,10 @@
 
     <string name="sslHttp">https://</string>
     <string name="nonSslHttp">http://</string>
+    
+    <string name="webServiceAddress">http://192.168.1.20:8080/meme_gen_server/spring</string>
+    <string name="webServiceMemeDataSuffix">meme_data</string>
+    <string name="webServiceBackgroundSuffix">background</string>
+    <string name="webServiceJsonSuffix">json</string>
 
 </resources>
