--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_create_meme">CreateMemeActivity</string>
 
-    <item name="create_meme_top_row_height" type="string">35dip</item>
+    <item name="create_meme_top_row_height" type="string">40dp</item>
 
     <string name="share_string">Share</string>
     <string name="save_string">Save</string>
