font face now has black border; top seek bar will correctly change the font size

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="webServiceMemeDataSuffix">meme_data</string>
     <string name="webServiceBackgroundSuffix">background</string>
     <string name="webServiceJsonSuffix">json</string>
-	<string name="maxFontSize">100</string>
 
+	<item name="maxFontSize" format="integer" type="integer">50</item>
+	<item name="initialFontSize" format="integer" type="integer">26</item>
 </resources>
