adding JSON type and thumb image MemeService methods

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -30,4 +30,9 @@
 
 	<item name="maxFontSize" format="integer" type="integer">50</item>
 	<item name="initialFontSize" format="integer" type="integer">26</item>
+	<string name="bundleconst_memebg">memebg</string>
+	<string name="bundleconst_samplememes">samplememes</string>
+	<string name="bundleconst_loaded">loaded</string>
+	<string name="bundleconst_pageradapter">pageradapter</string>
+	<string name="bundleconst_sampledlist">sampledlist</string>
 </resources>
