all and fav meme type list filtering working; need to impl 'popular' and 'search' in order to complete issue 3

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -41,4 +41,5 @@
 	<string name="filter_bar_btn_txt_all">All</string>
 	<string name="icon_heart_cont_descr">heart</string>
 	<string name="icon_magnifier_cont_descr">magnifier</string>
+	<string name="no_favorites_msg">No Favorites</string>
 </resources>
