added ad support to the list and create layouts

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -45,6 +45,7 @@
 	<string name="string_hint">Search for Meme Types</string>
 	<string name="title_activity_meme_type_search_results">Search Results</string>
 	<item type="bool" format="boolean" name="debug_toasts_enabled">false</item>
+	<item type="integer" format="integer" name="ad_refresh_time_ms">5000</item>
     
     
 </resources>
