--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -61,5 +61,6 @@
     <item name="meme_list_item_thumb_max_width" format="dimension" type="dimen">75dp</item>
     <item name="meme_list_item_text_min_width" format="dimension" type="dimen">600dp</item>
     <item name="meme_list_item_text_max_width" format="dimension" type="dimen">600dp</item>
+    <color name="back_transparent">#80000000</color>
 
 </resources>
