--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -20,10 +20,11 @@
 
     <string name="sslHttp">https://</string>
     <string name="nonSslHttp">http://</string>
-    <string name="webServiceAddress">http://polar-cliffs-6420.herokuapp.com/spring</string>
-    <!-- <string name="webServiceAddress">http://dylanxpeth:8080/meme_gen_server/spring</string> -->
-    <string name="webServiceMemeDataSuffix">meme_data</string>
-    <string name="webServiceBackgroundSuffix">background</string>
+<!--     <string name="webServiceAddress">http://polar-cliffs-6420.herokuapp.com/spring</string> -->
+    <string name="webServiceAddress">http://dylan-mint:8080/meme_gen_server</string> 
+    <string name="webServiceMemeSuffix">memes</string>
+    <string name="webServiceBackgroundSuffix">memebackgrounds</string>
+    <string name="webServiceBackgroundBytesSuffix">background_bytes</string>
     <string name="webServiceJsonSuffix">json</string>
     <string name="webServiceStoreMemePrefix">store_meme</string>
     <string name="webServiceSampleMemeDataPrefix">sample_meme_data</string>
