--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="webServiceListMemeBackgroundsJson">/memebackgrounds/list/json/1/10</string>
     <string name="webServiceListSampleMemesForBackgroundIdPre">/samplememes/listforbackground/json</string>
     <string name="webServiceListSampleMemesForBackgroundIdPost">/1/10</string>
+    <string name="webServiceListFavoriteMemeBackgroundsForUserId">/memeuserfavorites/backgroundsforuserid/json/1/10</string>
     
 
     <item name="maxFontSize" format="integer" type="integer">35</item>
