--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="webServiceStoreMemeFavoriteJson">/memeuserfavorites/store/json</string>
     <string name="webServiceRemoveMemeFavoriteJson">/memeuserfavorites/remove/json</string>
     <string name="webServiceFindMemeBackgroundsByNameJson">/memebackgrounds/findbyname/json</string>
+    <string name="webServiceGetMemesForUserJson">/memes/get_for_user/json/1/100</string>
 
     <item name="maxFontSize" format="integer" type="integer">35</item>
     <item name="initialFontSize" format="integer" type="integer">26</item>
