fixed issue with cacheing and favorites

--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -76,5 +76,6 @@
     <string name="key_thumb">thumb-</string>
     <string name="key_background">background-</string>
     <string name="popular_type_name">popular</string>
+    <string name="fav_backgrounds">fav_backgrounds</string>
 
 </resources>
