--- a/meme_gen_android/res/values/strings.xml
+++ b/meme_gen_android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <item name="environment" type="string" format="string">dev</item> <!-- dev, prod -->
-    <string name="app_name">meme_gen_android</string>
+    <item name="environment" type="string" format="string">prod</item> <!-- dev, prod -->
+    <string name="app_name">Meme Machine</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_create_meme">CreateMemeActivity</string>
